--- a/packages/view2/package.json
+++ b/packages/view2/package.json
@@ -8,5 +8,12 @@
   },
   "files": [
     "README.md"
-  ]
+  ],
+  "dependencies": {
+    "minifaker": "^1.34.0",
+    "regular-table": "^0.5.6"
+  },
+  "devDependencies": {
+    "@types/lodash.pick": "^4.4.6"
+  }
 }
