Update types to esm-view

--- a/packages/view1/package.json
+++ b/packages/view1/package.json
@@ -4,7 +4,7 @@
   "main": "src/index.tsx",
   "license": "UNLICENSED",
   "modular": {
-    "type": "view"
+    "type": "esm-view"
   },
   "files": [
     "README.md"
