--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "scripts": {
     "start": "modular start",
     "build": "modular build",
+    "serve:view1": "yarn http-server dist/view1 --cors -c-1 -p 5001 .",
+    "serve:view2": "yarn http-server dist/view2 --cors -c-1 -p 5002 .",
     "test": "modular test",
     "lint": "eslint . --ext .js,.ts,.tsx",
     "prettier": "prettier --write ."
@@ -54,5 +56,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "typescript": ">=4.2.1 <4.5.0"
+  },
+  "devDependencies": {
+    "http-server": "^14.1.1"
   }
 }
